<resources>
	<string name="description"></string>
    <string name="app_name">i-Asigurare</string>
    <string name="menu_settings"></string>
    <string name="i0">Diseases/Disorders</string>
    <string name="i1">i-Asigurare</string>
    <string name="i2">Pupil\n/Student</string>
    <string name="i3">Sport\nAgrement</string>
    <string name="i4">Disability\nDegree</string>
    <string name="i5">Heart\ndiseases</string>
    <string name="i6">Neuro\ndiseases</string>
    <string name="i7">Internal\ndiseases</string>
    <string name="i8">Respiratory\ndiseases</string>
    <string name="i9">Irreversible\ndiseases</string>
    <string name="i10">Other\ndiseases</string>
	<string name="i11">Discounts/Increases</string>
	<string name="i12">If you like i-Asigurare please\ntake a minute to evaluate\nthe applicaton in Google Play</string>
    <string name="i13">Do you like i-Asigurare?</string>
    <string name="i14">Review\nnow</string>
    <string name="i15">Choose traveller</string>
    <string name="i16">Water pipe cover</string>
    <string name="i17">Continue</string>
    <string name="i18">Home Insurance</string>
    <string name="i19">All of the below information refers to the vehicle owner</string>
    <string name="i20">Remind\nme later</string>
    <string name="i21">Check MTPL</string>
    <string name="i22">Notifications</string>
    <string name="i23">OK</string>
    <string name="i24">INFO</string>
    <string name="i25">YOUR EMAIL</string>
    <string name="i26">YOUR PHONE NUMBER</string>
    <string name="i27">MESSAGE SUBJECT</string>
    <string name="i28">...</string>
    <string name="i29">YOUR MESSAGE</string>
    <string name="i30">Send</string>
    <string name="i31">either the insurance company didn\'t provide the data to CEDAM, or it provided incorrect data</string>
    <string name="i32">SEATS NUMBER</string>
    <string name="i33">MAXIMUM MASS (KG)</string>
    <string name="i34">Theft cover</string>
    <string name="i35">PRODUCTION YEAR</string>
    <string name="i36">FUEL</string>
    <string name="i37">gas</string>
    <string name="i38">domestic\nuse</string>
    <string name="i39">   OK</string>
<string name="i40">you will be notified for the alerts set by you you will know when there are offers and promotions you may receive discounts</string>
    <string name="i41">taxi</string>
    <string name="i42">goods distribution</string>
    <string name="i43">REGISTRATION CERTIFICATE SERIAL</string>
    <string name="i44">USE OF VEHICLE</string>
    <string name="i45">Civil liability</string>
    <string name="i46">Full\nprice</string>
    <string name="i47">Insured amount (at least 10000 EUR)</string>
    <string name="i48">Civil liability insured amount (EUR))</string>
    <string name="i49">Replacement\nvalue</string>
   	<string name="i50">Real\nvalue</string>
   	<string name="i51">Market\nvalue</string>
   	<string name="i52">Bank\nevaluation</string>
    <string name="i53">Ask for the offer</string>
    <string name="i54">NAME AND SURNAME</string>
    <string name="i55">Vodafone\nclient price</string>
    <string name="i56">SSN</string>
    <string name="i57">EMAIL</string>
    <string name="i58">CHOOSE OPERATOR</string>
    <string name="i59">ID / PASSPORT SERIAL</string>
    <string name="i60">COUNTY, CITY</string>
    <string name="i61">COUNTY, CITY</string>
    <string name="i62">ADDRESS</string>
    <string name="i63">PHONE</string>
    <string name="i64">CAEN</string>
    <string name="i65">Tourism</string>
    <string name="i66">Quit</string>
    <string name="i67">Save</string>
    <string name="i68">VEHICLE IN LEASING?</string>
    <string name="i69">LEASING COMPANY NAME</string>
    <string name="i70">Choose the property</string>
    <string name="i71">Business</string>
    <string name="i72">Search</string>
    <string name="i73">The fees are directly obtained from the insurance companies.</string>
    <string name="i74">The travel insurance payment is done only with the card.</string>
    <string name="i75">You will receive the policy by email within a few minutes after payment is completed.</string>
    <string name="i76">The fees are directly obtained from the insurance companies.</string>
    <string name="i77">INSURED PROPERTY</string>
    <string name="i78">The payment for the home insurance is done online with the card.</string>
    <string name="i79">diesel</string>
    <string name="i80">You will receive the policy by email within a few minutes after payment is completed.</string>
    <string name="i81">Professional driver</string>
    <string name="i82">Studies</string>
    <string name="i83">Number of days</string>
    <string name="i84">lpg</string>
    <string name="i85">Destination country</string>
    <string name="i86">PROPERTY OWNER</string>
    <string name="i87">5</string>
    <string name="i88">Evaluation module</string>
    <string name="i89">The fees are directly obtained from the insurance companies.</string>
    <string name="i90">Choose the payment method</string>
    <string name="i91">The MTPL insurance policy is delivered for FREE by quick delivery</string>
    <string name="i92">YES</string>
    <string name="i93">HOUSE TYPE</string>
    <string name="i94">Apartment\n </string>
    <string name="i95">Business register number</string>
    <string name="i96">Order</string>
    <string name="i97">House - shared</string>
    <string name="i98">NO</string>
    <string name="i99">FLOOR</string>
    <string name="i100">NUMBER OF ROOMS</string>
    <string name="i101">VEHICLE BRAND</string>
    <string name="i102">CHASSIS NUMBER</string>
    <string name="i103">CM3</string>
    <string name="i104">VEHICLE MODEL</string>
    <string name="i105">POWER (KW)</string>
    <string name="i106">VEHICLE CATEGORY</string>
    <string name="i107">CONSTRUCTION YEAR (>=1900)</string>
    <string name="i108">Automobile</string>
    <string name="i109">Motorbike</string>
    <string name="i110">CERTIFICATE COUNTY, CITY</string>
    <string name="i111">REGISTRATION PLATE NO.</string>
    <string name="i112">Off-road vehicle</string>
    <string name="i113">BUILDING HEIGHT (NO. OF FLOORS)</string>
    <string name="i114">OTHER INFORMATION</string>
    <string name="i115">SURFACE (SM)</string>
    <string name="i116">2</string>
    <string name="i117">NUMBER OF TENANTS</string>
    <string name="i118">RESISTANCE STRUCTURE</string>
    <string name="i119">House - individual</string>
    <string name="i120">DELIVERY (COUNTY, CITY)</string>
    <string name="i121">DELIVERY (STREET, NUMBER, BLOCK)</string>
    <string name="i122">NAME</string>
    <string name="i123">Warning!</string>
    <string name="i124">Operator</string>
    <string name="i125">Please fill in your phone number and the e-mail address in My Data - My Profile. We need this information in order to send you the offer.</string>
    <string name="i126">Insured amount</string>
    <string name="i127">Insurance start date</string>
    <string name="i128">Calculate</string>
    <string name="i129">Vodafone</string>
    <string name="i130">Orange</string>
    <string name="i131">TO TELL US SOMETHING</string>
    <string name="i132">Cosmote</string>
    <string name="i133">Text mai mic</string>
    <string name="i134">text</string>
    <string name="i135">DUE INSTALMENT</string>
    <string name="i136">select the last validity date</string>
    <string name="i137">Start</string>
    <string name="i138">DUE INSTALMENT</string>
    <string name="i139">11.11.2011</string>
    <string name="i140">Franchise</string>
    <string name="i141">no</string>
    <string name="i142">Sport cover</string>
    <string name="i143">Electronic dev.</string>
    <string name="i144">Baggage</string>
    <string name="i145">Confirm deletion</string>
    <string name="i146">Press YES to delete this registration, if you don\'t want to delete the registration press NO.</string>
    <string name="i147">Choose the vehicle</string>
    <string name="i148">Choose the owner</string>
    <string name="i149">VEHICLE OWNER (SEE CERTIFICATE)</string>
    <string name="i150">Vehicle km number</string>
    <string name="i151">Vehicle color</string>
    <string name="i152">If the car has Motor Hull please select the company</string>
    <string name="i153">Allianz</string>
    <string name="i154">Omniasig</string>
    <string name="i155">Generali</string>
    <string name="i156">Information on DISCOUNTS</string>
    <string name="i157">choose from the list</string>
    <string name="i158">INSURED VEHICLE</string>
    <string name="i159">With tranzit</string>
    <string name="i160"></string>
    <string name="i161">Choose payment method</string>
    <string name="i162">Travel objective</string>
    <string name="i163">\n In full</string>
    <string name="i164">2 Instalments</string>
    <string name="i165">4 Instalments</string>
    <string name="i166"><b>"Add vehicle"</b></string>
    <string name="i167"><b>"Add property"</b></string>
    <string name="i168"><b>"Add insured person"</b></string>
    <string name="i169">Full\nconditions</string>
    <string name="i170">Cover\nsummary</string>
    <string name="i171">There aren\'t persons saved in the list.\nIn order to add a new person, press the button above\n\"Add insured person\"</string>
    <string name="i172">There aren\'t properties saved in the list.\nIn order to add a new property, push the button above\n\"Add property\"</string>
    <string name="i173">There aren\'t any cars saved in the list.\nTo add a new car, press the button above\n\"Add vehicle\"</string>
    <string name="i174">You have no ordered insurance.\nThe insurance policies ordered through the application will automatically appear</string>
    <string name="i175"><b>Titlu layout</b></string>
    <string name="i176">We search\nfor the lowest fees\ndirectly from the\ninsurance companies</string>
    <string name="i177">CASH,upon\ndelivery</string>
    <string name="i178">Bank\ntransfer</string>
    <string name="i179">ONLINE,\ncard</string>
    <string name="i180">EMAIL CONTACT</string>
    <string name="i182">\n\nThis information will be provided to an i-Asigurare representative. We try to get the best prices for your car.\n\nDue to high number of requests, it might take up to 3 days until we send you the fees, as all the requests are individually processed. \n\nTaking this into account, please ask for an offer only if your car needs a Motor Hull insurance in the next 30 days.\n\n</string>
	<string name="i183">It was a test.\nQUIT</string>
	<string name="i184">It \'s clear.\nI want Motor Hull</string>
	<string name="i189">5.000 €</string>
	<string name="i190">10.000 €</string>
	<string name="i191">30.000 €</string>
	<string name="i192">50.000 €</string>
	<string name="i193">You\'ve got BO Bonus. The fees could be higher! Possible causes:</string>
	<string name="i196">6 months</string>
	<string name="i197">12 months</string>
	<string name="i221"> ● the car chassis number is incorrect;\n● the SSN / business register number is incorrect;\n● other SSN / business register number than that of the car owner\'s was inserted;\n● there is no history for the group car - owner, in which case please don\'t take into account this warning.</string>
	<string name="i649"> Gothaer company may sometimes have problems with the automatic issuing. The insurance is valid, but you may not receive it by e-mail. In this case, we will send you the policy on Monday morning.</string>
	<string name="i650">I choose\n other company</string>
	<string name="i651">I \n agree </string>
	<string name="i761">Insurance</string>
	<string name="i762">fees</string>
	<string name="i763">the lowest fees for your car</string>
	<string name="i776">Insurance</string>
	<string name="i777">fees</string>
	<string name="i778">the lowest fees for your trip</string>
	<string name="i798">Thank you for your understanding!</string>
	<string name="i800">Delete registration ?</string>
	<string name="i802">Important</string>
</resources>