
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">
                    
          <RelativeLayout
          android:id="@+id/header_tarife"
            android:layout_width="fill_parent"
            android:layout_height="80dp"

            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/description"
                android:src="@drawable/header_tarife_rca" />

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/imageView1" >
            
            <TextView
                android:id="@+id/text_header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/i761"
                android:textColor="@color/ColorTitlu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i762"
                android:textColor="@color/verde"
                android:textSize="24sp" />
            
            </LinearLayout>

            <TextView
                android:id="@+id/text_header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/lay1"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/imageView1"
                android:text="@string/i763"
                android:textColor="@color/MenuLightGrey"
                android:textSize="13sp" />
        </RelativeLayout>
     
     <RelativeLayout
         android:id="@+id/cellb0"
		 android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#eeeeee" >
    
    <TextView
        android:id="@+id/text_b01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/i193"
        android:textColor="#e50707"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/text_b02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="3dp"
        android:textSize="10sp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="3dp"
        android:layout_below="@+id/text_b01"
        android:text="@string/i221"
        android:textColor="@color/ColorTitlu"/>

    <Button
        android:id="@+id/button_x"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/buton_x"
        android:text="" />
    
</RelativeLayout>
                
     <View
     	android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#C9C9C9" />
     
     <LinearLayout
        android:id="@+id/ll_butonae"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

         <Button
             android:id="@+id/btn_6luni"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:background="@drawable/selectat_stanga_masina"
             android:text="@string/i196"
             android:textColor="@color/white" />

                 <Button
                     android:id="@+id/btn_12luni"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:background="@drawable/selectat_dreapta_masina"
                     android:text="@string/i197" />
     </LinearLayout>
                    
     <TextView
     	android:id="@+id/tv_tiltu_prod"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
		android:paddingLeft="5dp"
		android:textStyle="bold"
		android:textSize="15sp"
		android:visibility="gone"
      	android:background="@color/MenuLightGrey"
      	android:textColor="@color/white"
      	android:layout_marginBottom="3dp"
      	android:text="1 persoana,5 zile in Turcia"/>
                    

     <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:choiceMode="singleChoice"
        android:typeface="sans" >
     </ListView>


                    
   </LinearLayout>