
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/main_center"
      android:layout_width="match_parent"
      android:layout_height="fill_parent"
	  android:layout_below="@+id/image_tarife_header"
      android:orientation="vertical" >
                
              <RelativeLayout
          android:id="@+id/asigurare"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:contentDescription="@string/description"
                android:src="@drawable/header_tarife_calatorie" />

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/imageView1" >
            
            <TextView
                android:id="@+id/text_header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/i776"
                android:textColor="@color/ColorTitlu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i777"
                android:textColor="@color/portocaliu_persoana"
                android:textSize="24sp" />
            
            </LinearLayout>

            <TextView
                android:id="@+id/text_header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/lay1"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:layout_toLeftOf="@+id/imageView1"
                android:text="@string/i778"
                android:textColor="@color/MenuLightGrey"
                android:textSize="12sp" />
        </RelativeLayout>
               
                
                
            <View
        		android:layout_width="match_parent"
        		android:layout_height="2dp"
        		android:background="#C9C9C9" />

                <LinearLayout
                    android:id="@+id/ll_butonae"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btn_5000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/i189"
                        android:textColor="@color/white"
                        android:background="@drawable/selectat_tarife" />
                    
                    <Button
                        android:id="@+id/btn_10000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/i190"
                        android:background="@drawable/neselectat_tarife" />
                    
                    <Button
                        android:id="@+id/btn_30000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/i191"
                        android:background="@drawable/neselectat_tarife" />
                    
                    <Button
                        android:id="@+id/btn_50000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/i192"
                        android:background="@drawable/neselectat_tarife" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >
                    
                    <TextView
        		android:id="@+id/tv_tiltu_prod"
      			android:layout_width="fill_parent"
      			android:layout_height="wrap_content"
				android:paddingLeft="5dp"
				android:textStyle="bold"
				android:textSize="15sp"
      			android:background="@color/MenuLightGrey"
      			android:textColor="@color/white"
      			android:layout_marginBottom="3dp"
      			android:text="1 persoana,5 zile in Turcia"/>
                    

             <ListView
                android:id="@+id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:choiceMode="singleChoice"
                android:typeface="sans" >
            </ListView>

                    
      </LinearLayout>
</LinearLayout>