
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_generic" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_img" />
    
    <TextView
        android:id="@+id/text_titlu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i145"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:textSize="15sp"
        android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_vrei_sa_stergi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/i800"
        android:gravity="center"
        android:textColor="@color/rosu_termeni"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progressBarDialog"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_continut"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:textSize="12sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/i146"
        android:textColor="#000000" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_nu"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:textColor="@color/ColorTitlu"
                android:layout_marginRight="5dp"
                android:background="@drawable/renunt_popup"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:text="@string/i98" />
            
            <Button
                android:id="@+id/button_tweet"
                android:layout_width="70dp"
                android:layout_height="40dp"
             	android:visibility="invisible"
                android:background="@drawable/renunt_popup"
                android:text="" />

            <Button
                android:id="@+id/button_da"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:textColor="@color/ColorTitlu"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ok_rca"
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:text="@string/i92" />

        </LinearLayout>

</LinearLayout>